--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,20 @@
+
+.navbar,
+.red {
+  background-color: red;
+}
+
+.navbar > div > button {
+  width: 110px;
+  height: auto;
+  font-weight: bolder;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 footer {
   width: 97%;
   margin:auto;
