--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-
 .navbar,
 .red {
   background-color: red;
@@ -44,9 +43,10 @@ footer {
   padding-top: 6px;
   font-size: 11px;
   line-height: 15px;
-  color: #343a40;  
+  color: #343a40;
 }
-footer .fas, footer .fab {
+footer .fas,
+footer .fab {
   margin: auto;
   color: #aaa;
   padding: 4px 4px;
@@ -56,8 +56,9 @@ footer .fas, footer .fab {
   text-decoration: none;
 }
 
-footer .fas:hover , footer .fab:hover  {
- color:#007bff
+footer .fas:hover,
+footer .fab:hover {
+  color: #007bff;
 }
 
 .footercountry {
@@ -71,7 +72,7 @@ footer .fas:hover , footer .fab:hover  {
   text-align: start;
   text-decoration: none;
   padding: -5px 10px;
-  font-family: Arial,Helvetica,sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 11px;
   background-color: #f4f5f6;
   color: #333;
@@ -94,9 +95,8 @@ footer .fas:hover , footer .fab:hover  {
 
 /*  Media query */
 
-@media (min-width: 768px) { 
+@media (min-width: 768px) {
   .mainbody {
     background-color: white;
   }
-
- }
+}
