--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
   margin-left: auto;
   margin-right: auto;
 }
+
 .nav-sticky {
   background-color: red;
   width: 100%;
@@ -12,6 +13,7 @@
   top: 0;
   z-index: 5;
 }
+
 .not-sticky {
   width: 1200px;
   position: relative;
@@ -20,6 +22,11 @@
 
 .nav-color {
   color: #f4f5f6;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .mynav2 a {
@@ -46,13 +53,10 @@
   font-weight: bolder;
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
 .nav-bottom {
-  /* background-color: white; */
+  margin-left: -15px;
+  width: 1270px;
+  background-color: #f4f5f6;
   border-top: 1px solid lightgray;
   border-bottom: 1px solid lightgray;
 }
@@ -69,6 +73,21 @@ a {
   font-weight: bold;
 }
 
+.footercountry a {
+  margin-right: 5px;
+  text-align: start;
+  text-decoration: none;
+  padding: -5px 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 11px;
+  background-color: #f4f5f6;
+  color: #333;
+}
+
+.footer a {
+  text-decoration: none;
+}
+
 .nav-bottom a:hover {
   color: #f72210;
   text-decoration: none;
@@ -83,15 +102,12 @@ footer {
   line-height: 15px;
   color: #343a40;
 }
+
 footer .fas,
 footer .fab {
   margin: auto;
   color: #aaa;
   padding: 4px 4px;
-}
-
-.footer a {
-  text-decoration: none;
 }
 
 footer .fas:hover,
@@ -105,17 +121,6 @@ footer .fab:hover {
   z-index: 5;
 }
 
-.footercountry a {
-  margin-right: 5px;
-  text-align: start;
-  text-decoration: none;
-  padding: -5px 10px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 11px;
-  background-color: #f4f5f6;
-  color: #333;
-}
-
 .copyright {
   margin-top: 0;
   margin-left: 1px;
@@ -126,6 +131,7 @@ footer .fab:hover {
   color: red;
   font-weight: bold;
 }
+
 .mainbody {
   color: black;
   text-decoration: none;
@@ -136,8 +142,8 @@ footer .fab:hover {
     display: none;
   }
 }
-/*  Media query */
 
+/* Media query */
 @media (min-width: 768px) {
   .mainbody {
     background-color: white;
