--- a/styles/style.css
+++ b/styles/style.css
@@ -365,7 +365,8 @@ body {
   width: 29px;
   height: 28px;
   margin-right: 10px;
-  background: url(https://g.newsweek.com/www/images/logo-n1.svg) center/contain
+  background: 
+  url(https://g.newsweek.com/www/images/logo-n1.svg) center/contain
   no-repeat #f72210;
 }
 
