--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
   max-width: 1270px;
   position: fixed;
   top: 0;
-  z-index: 5;
+  z-index: 3;
 }
 
 .not-sticky {
@@ -127,7 +127,6 @@ footer .fab:hover {
 }
 
 .footercountry {
-  border-top: 1px solid red;
   margin: 5px;
   z-index: 5;
 }
@@ -151,8 +150,9 @@ footer .fab:hover {
 html,
 body {
   min-height: 100%;
-  margin: 0;
+  margin: auto;
   padding: 0;
+  background-color: rgb(233, 233, 236);
 }
 
 /* TOP PART */
@@ -181,6 +181,9 @@ body {
 }
 
 .title {
+  padding-bottom: 11px;
+  font-size: 18px;
+  color: rgba(3,3,3,.4);
   margin-top: 15px;
 }
 
@@ -194,6 +197,11 @@ body {
   float: left;
   width: 95px;
   margin-right: 15px;
+}
+
+.insight-img {
+  width: 300px;
+  height: auto;
 }
 
 .debate-item {
@@ -263,6 +271,30 @@ body {
 .debate-item .image img,
 .opinion .image img {
   width: 63px;
+}
+
+.n-icon {
+  width: 30px;
+  height: 30px;
+}
+.mail-form {
+  padding: 5px;
+  width: 220px;
+}
+.submit-form {
+  padding: 5px;
+  color: white;
+  width: 220px;
+  background-color: #F72210;
+}
+
+.small-font {
+  font-weight: bold;
+  font-size: 18px;
+  font-family: "Roboto Condensed",sans-serif;
+  margin-bottom: 10px;
+  position: relative;
+  color: black;
 }
 
 /* IN THE MAGAZINE */
