--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,11 @@
 .container-fluid {
   max-width: 1310px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; 
 }
 
 .nav-sticky {
-  background-color: red;
+  background-color:#f72210;
   width: 100%;
   max-width: 1270px;
   position: fixed;
@@ -20,9 +20,8 @@
   z-index: 9;
 }
 
-.nav-color {
-  position: relative;
-  color: #f4f5f6;
+svg {
+  fill: white;
 }
 
 a {
@@ -151,14 +150,14 @@ footer .fab:hover {
 html,
 body {
   min-height: 100%;
-  margin: auto;
+  margin: 0;
   padding: 0;
   background-color: rgb(233, 233, 236);
 }
 
 /* TOP PART */
 
-.col-71 {
+/* .col-71 {
   width: 71%;
 }
 
@@ -168,13 +167,13 @@ body {
 
 .col1 {
   width: 41%;
-}
+} */
 
-.col2 {
+/* .col2 {
   width: 59%;
   padding-left: 20px;
   padding-right: 20px;
-}
+} */
 
 .culture-item img {
   width: 100%;
@@ -326,6 +325,11 @@ body {
   margin-right: 7px;
 }
 
+.cat a {
+  font-weight: bold;
+  color: red;
+}
+
 .magazine-category {
   margin-top: 10px;
 }
@@ -409,14 +413,17 @@ body {
   position: relative;
 }
 
-.category {
+.category a {
+  display: block;
+  font: bold 17px/16px "Roboto Condensed",sans-serif;
+  color: #f72210;
+  text-transform: uppercase;
+  padding: 8px 15px 9px;
+  background-color: rgba(255,255,255,.9);
   position: absolute;
   bottom: 0;
   left: 0;
-  background: linear-gradient(to bottom right, white, black);
-  width: 100px;
-  height: 40px;
-  padding: 10px;
+  z-index: 1;
 }
 
 .editor-img {
@@ -451,16 +458,6 @@ body {
   margin: 0;
   padding: 0;
 }
-
-.col-sm-4 {
-  padding: 0 15px;
-}
-
-/* .container-fluid {
-  max-width: 1310px;
-  margin-right: auto;
-  margin-left: auto;
-} */
 
 .f1 {
   display: flex;
@@ -504,7 +501,6 @@ p {
 }
 
 .block-title {
-  border-top: 1px solid black;
   color: red;
   font-size: 1.4rem;
   padding-bottom: 11px;
@@ -538,11 +534,6 @@ p {
   font-size: 1.4rem;
 }
 
-.button-cont {
-  background-color: red;
-  margin-top: 10px;
-}
-
 @media (min-width: 991.99px) {
   .f2 p,
   .f2 form {
@@ -569,6 +560,11 @@ p {
 
   .info p {
     margin-top: 15px;
+  }
+
+  #info-bt {
+    background-color: red;
+    color: white;
   }
 
   .img-half {
@@ -603,4 +599,5 @@ p {
     width: 110px;
     height: 110px;
   }
+  
 }
