--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 }
 
 .nav-sticky {
-  background-color:#f72210;
+  background-color: #f72210;
   width: 100%;
   max-width: 1270px;
   position: fixed;
@@ -99,6 +99,24 @@ a {
   font-weight: 800;
 }
 
+.category a {
+  display: block;
+  font: bold 17px/16px "Roboto Condensed",sans-serif;
+  color: #f72210;
+  text-transform: uppercase;
+  padding: 8px 15px 9px;
+  background-color: rgba(255, 255, 255, 0.9);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.cat a {
+  font-weight: bold;
+  color: red;
+}
+
 .nav-bottom a:hover {
   color: #f72210;
   text-decoration: none;
@@ -131,10 +149,10 @@ footer .fab:hover {
   z-index: 5;
 } */
 
-/* .copyright {
+.copyright {
   margin-top: 20px;
   margin-left: 1px;
-} */
+}
 
 .text-red {
   padding-bottom: 0;
@@ -325,11 +343,6 @@ body {
   margin-right: 7px;
 }
 
-.cat a {
-  font-weight: bold;
-  color: red;
-}
-
 .magazine-category {
   margin-top: 10px;
 }
@@ -411,19 +424,6 @@ body {
 
 .wrap {
   position: relative;
-}
-
-.category a {
-  display: block;
-  font: bold 17px/16px "Roboto Condensed",sans-serif;
-  color: #f72210;
-  text-transform: uppercase;
-  padding: 8px 15px 9px;
-  background-color: rgba(255,255,255,.9);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
 }
 
 .editor-img {
@@ -577,6 +577,7 @@ p {
 
   .form-group {
     display: flex;
+    padding-left: 10px;
   }
 
   .form-cont {
@@ -599,5 +600,4 @@ p {
     width: 110px;
     height: 110px;
   }
-  
 }
