--- a/styles/style.css
+++ b/styles/style.css
@@ -4,26 +4,35 @@
   overflow-x: hidden;
 }
 
-.nav-sticky {
-  max-width: 1270px;
-  position: fixed;
-  top: 0;
-  z-index: 4;
+.subscribe-btn {
+  width: 200px;
 }
 
-.not-sticky {
-  width: 1200px;
-  position: relative;
-  z-index: 9;
+.top-nav1 {
+  z-index: 6;
+}
+
+.bottom-nav-sticky {
+  width: 100%;
+  max-width: 1310px;
+  top: 0;
+  z-index: 5;
+}
+
+.special {
+  z-index: 10;
+  width: 1410px;
+}
+
+li {
+  list-style: none;
+}
+li a {
+  /* color: black; */
 }
 
 svg {
   fill: white;
-}
-
-.navbar {
-  margin-left: -15px;
-  width: 100%;
 }
 
 .category a {
@@ -41,10 +50,7 @@ footer {
 }
 
 .title {
-  padding-bottom: 11px;
   font-size: 18px;
-  color: rgba(3, 3, 3, 0.4);
-  margin-top: 15px;
 }
 
 .image-float img {
@@ -80,11 +86,6 @@ footer {
   z-index: 1;
 }
 
-/* .magazine-image img {
-  width: 100%;
-  min-height: 100%;
-} */
-
 .debate-item .image img,
 .opinion .image img {
   width: 63px;
@@ -96,35 +97,14 @@ footer {
 }
 
 .small-font {
-  font-weight: bold;
   font-size: 18px;
   font-family: "Roboto Condensed", sans-serif;
-  margin-bottom: 10px;
-  position: relative;
-  color: black;
 }
 
 /* IN THE MAGAZINE */
-.flex-sm-3 {
-  width: 25%;
-  padding: 0 15px 0 15px;
-}
-
 .mapping-tablet {
   width: 100%;
   height: auto;
-}
-
-.mag-cat {
-  padding: 0 7px;
-  background-color: #f72210;
-  color: white;
-  margin-right: 7px;
-}
-
-.magazine-image {
-  width: 100%;
-  max-height: 100%;
 }
 
 .bottom-part h5,
@@ -133,51 +113,20 @@ footer {
   font-size: 1.3rem;
 }
 
-.bottom-part h5,
-.top-part h5 {
-  margin-top: 10px;
-}
-
 @media (max-width: 767.99px) {
   .upper-part {
     flex-direction: column;
   }
-
-  .flex-sm-3 {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding: 0 15px 0 15px;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 50px;
-  }
 }
 
 /* Editors Pick */
-
-.editor-section {
-  margin-bottom: 50px;
-}
-
-.editor-section .row article {
-  margin-bottom: 20px;
-}
-
 .header-editor {
-  border-bottom: 1px solid gray;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 30px;
-  font-weight: 800;
   font-size: 1.5rem;
 }
 
 .header-editor .icon-n {
-  display: block;
   width: 29px;
   height: 28px;
-  margin-right: 10px;
   background:
     url(https://g.newsweek.com/www/images/logo-n1.svg) center/contain
   no-repeat #f72210;
@@ -197,51 +146,13 @@ footer {
   height: 110px;
 }
 
-.border-bottom {
-  border-bottom: 1px solid black;
-  margin-bottom: 15px;
-}
-
-.flex-xs {
-  display: flex;
-  padding-bottom: 10px;
-}
-
-.feature ul {
-  padding-left: 0;
-}
-
-.container {
-  margin: 0;
-  padding: 0;
-}
-
-.f1 {
-  display: flex;
-}
-
-.image-subscribe {
-  position: relative;
-  padding-right: 90px;
-  padding-bottom: 15px;
-}
-
 .col-1 {
-  padding: 30px;
-  position: relative;
-  background-color: #f4f5f6;
   min-width: 100%;
-  align-items: center;
 }
 
 .upper-image {
-  position: absolute;
   top: 15px;
   left: 80px;
-}
-
-.info {
-  padding-left: 30px;
 }
 
 .info h3,
@@ -250,7 +161,6 @@ p {
 }
 
 .img-half {
-  position: relative;
   min-width: 48%;
   background-image: url(https://web.archive.org/web/20210120125445if_/https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&h=265&q=90&f=742bce9a6f72dd8f19ba2e7fd5db06e5);
   background-size: 100% 100%;
@@ -259,35 +169,10 @@ p {
 
 .block-title {
   font-size: 1.4rem;
-  padding-bottom: 11px;
-}
-
-.flex-sm {
-  display: flex;
-}
-
-.opinion .flex-sm {
-  border-bottom: 4px solid #d9d9d9;
-  margin-bottom: 10px;
-}
-
-.f2 {
-  border: 1px solid #ebebeb;
-  padding: 30px;
-  padding-right: 0;
 }
 
 .heading {
   font-size: 1.1rem;
-}
-
-.subscribe-content {
-  margin-bottom: 50px;
-}
-
-.red {
-  color: red;
-  font-size: 1.4rem;
 }
 
 @media (min-width: 991.99px) {
@@ -314,16 +199,11 @@ p {
     left: 30px;
   }
 
-  .info p {
-    margin-top: 15px;
-  }
-
   .img-half {
     height: 170px;
   }
 
   .feature2-image {
-    margin-right: 10px;
     width: 258px;
     height: 258px;
   }
