add tablet version of newspaper sections and opinion sections

--- a/styles/style.css
+++ b/styles/style.css
@@ -137,9 +137,9 @@ footer {
   height: 300px;
 }
 
-.feature2-image {
-  width: 110px;
-  height: 110px;
+.feature .feature2-image {
+  width: 100px;
+  height: 100px;
 }
 
 .col-1 {
